elastic fixes: 1) make cucumber tests run with the build; 2) move hard-coded values (fuzziness, maxGaps, slop) to yaml file; 3) remove hardcoded synopsis; 4) add more cucumber tests in SearchController.feature; 5) add operationsSorter;